<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4"
            >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/editText_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10">
                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <EditText
                    android:id="@+id/editText_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10">
                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end" />

                <EditText
                    android:id="@+id/editText_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10">
                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >

            <Button
                android:id="@+id/drive"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:onClick="searchButtonProcess"
                android:text="@string/drive" />

            <Button
                android:id="@+id/transit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:onClick="searchButtonProcess"
                android:text="@string/transit" />

            <Button
                android:id="@+id/walk"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:onClick="searchButtonProcess"
                android:text="@string/walk" />
            <Button
                android:id="@+id/bike"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="2dip"
                android:layout_weight="1.0"
                android:onClick="searchButtonProcess"
                android:text="@string/bicycle" />

        </LinearLayout>
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/search_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>